--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn
+{
+  font-size: 30px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav__text{
+  color:#000;
+  font-size: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.forMac
+{
+  margin-right:25px;
 }
-
-.App-link {
-  color: #61dafb;
+.menu__tittle
+{
+  font-size:30px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.col
+{
+  color:#fff;
+  height: 200px;
+}
+.row
+{
+  position: relative;
+  top:150px;
+  width: 900px;
+}
+.textarea
+{
+  position: relative;
+  width:100%;
+  min-height: 100%;
+  border:2px solid #21252a;
+  border-radius: 7px;
+  padding: 10px;
+  resize: none;
+}
+.mr-5{
+  margin-right: 50px;
+}
+@media(max-width:1000px)
+{
+  .item{
+    display: none;
   }
 }
